Addition of 2nd page.

--- a/Jeep-Site/assets/sass/_footer.scss
+++ b/Jeep-Site/assets/sass/_footer.scss
@@ -13,7 +13,7 @@ footer {
 	}
 
 	li{
-		color: $body-text-color;
+		color: $body-text;
 		font-size: 12px;
 		margin-bottom: 6px;
 		font-family: $font;
@@ -40,7 +40,7 @@ footer {
 	}
 
 	p{
-		color: $body-text-color;
+		color: $body-text;
 		width: 80%;
 		margin-bottom: 30px;
 		margin-left: 5.5%;
