--- a/Jeep-Site/assets/sass/_variables.scss
+++ b/Jeep-Site/assets/sass/_variables.scss
@@ -4,7 +4,8 @@
 
 }
 
-@include maxwh;
 
-$body-text = #a0a09e;
-$font = arial,helvetica,sans-serif;
+
+$body-text: #a0a09e;
+$font:  arial,helvetica,sans-serif;
+$pg-2-header-color: #FEFFFF;
