--- a/Jeep-Site/assets/css/main.css
+++ b/Jeep-Site/assets/css/main.css
@@ -1,10 +1,3 @@
-html, body {
-  width: 100%;
-  height: 100%; }
-
-* {
-  box-sizing: border-box; }
-
 .nav {
   display: flex;
   width: 100%;
@@ -21,15 +14,11 @@ html, body {
     left: 23.23529412%;
     height: 60px; }
   .nav li {
-    color: #8B9A9F;
-    font-family: arial,helvetica,sans-serif;
+    color: #a0a09e;
+    font-family: arial, helvetica, sans-serif;
     height: 100%;
     display: flex;
     align-items: center; }
-  .nav .hovers:active {
-    width: 100%;
-    height: 100%;
-    background: white; }
   .nav #logo {
     width: 137px;
     height: 14%;
@@ -94,25 +83,117 @@ footer {
     color: #a0a09e;
     font-size: 12px;
     margin-bottom: 6px;
-    font-family: arial,helvetica,sans-serif; }
+    font-family: arial, helvetica, sans-serif; }
   footer div {
     padding-top: 3%; }
   footer h4 {
     font-size: 16px;
     margin-bottom: 5px;
     color: white;
-    font-family: arial,helvetica,sans-serif; }
+    font-family: arial, helvetica, sans-serif; }
   footer .legal-container {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     margin-top: 24px; }
   footer p {
-    color: #8B9A9F;
+    color: #a0a09e;
     width: 80%;
     margin-bottom: 30px;
     margin-left: 5.5%;
     font-size: 12px;
-    font-family: arial,helvetica,sans-serif; }
+    font-family: arial, helvetica, sans-serif; }
+
+body, html {
+  width: 100%;
+  height: 100%;
+  background-color: #222222; }
+
+.hero-p2 {
+  width: 100%;
+  height: 500px;
+  background-image: url("../img/wrangler-main.jpg");
+  display: flex;
+  flex-direction: column;
+  background-repeat: no-repeat;
+  background-size: cover; }
+  .hero-p2 .hero-text-wrap {
+    margin-top: 35px;
+    margin-left: 60px;
+    font-family: arial, helvetica, sans-serif; }
+    .hero-p2 .hero-text-wrap .large-text {
+      font-size: 42px;
+      width: 35%; }
+    .hero-p2 .hero-text-wrap .smaller-text {
+      font-size: 22px; }
+    .hero-p2 .hero-text-wrap h1 {
+      color: #FEFFFF;
+      margin-bottom: 20px; }
+    .hero-p2 .hero-text-wrap p {
+      color: #FEFFFF;
+      width: 23%; }
+
+.jeep-description-wrap {
+  background-color: white;
+  width: 93%;
+  margin-left: 3.294289898%;
+  margin-right: 3.294289898%;
+  border-radius: 8px; }
+  .jeep-description-wrap .jeep-description {
+    width: 100%;
+    height: 233px;
+    display: flex;
+    font-family: arial, helvetica, sans-serif; }
+    .jeep-description-wrap .jeep-description h1 {
+      font-size: 20px;
+      font-weight: bold;
+      margin-bottom: 3%; }
+    .jeep-description-wrap .jeep-description h2 {
+      font-size: 27px; }
+    .jeep-description-wrap .jeep-description h5 {
+      font-size: 12px;
+      width: 73%; }
+    .jeep-description-wrap .jeep-description .sales-price {
+      margin-top: 25px;
+      margin-left: 3%; }
+    .jeep-description-wrap .jeep-description .lease-price {
+      margin-top: 25px; }
+    .jeep-description-wrap .jeep-description .classic-img {
+      position: absolute;
+      right: 6%;
+      top: 86%; }
+
+.award {
+  width: 100%;
+  height: 91px;
+  background-image: url(../img/awards-background.jpg);
+  position: relative;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  left: 0%;
+  top: -14%;
+  width: 93%;
+  margin-left: 3.294289898%;
+  margin-right: 3.294289898%;
+  border-radius: 8px;
+  justify-content: center;
+  align-items: center; }
+  .award .bold-award {
+    font-weight: bold; }
+  .award .award-pic {
+    position: absolute;
+    left: 30%; }
+
+html {
+  width: 100%;
+  height: 100%; }
+
+body {
+  width: 100%;
+  height: 100%; }
+
+* {
+  box-sizing: border-box; }
 
 /*# sourceMappingURL=main.css.map */
