--- a/Jeep-Site/assets/sass/main.scss
+++ b/Jeep-Site/assets/sass/main.scss
@@ -1,18 +1,26 @@
-html, body{
-	width: 100%;
-	height: 100%;
-
-
-}
-
-*{
-	box-sizing:border-box;
-}
-
-
-
 @import 'variables';
 @import 'nav';  
 @import 'hero';
 @import 'footer';
+@import '2nd-page-hero';
+
+
+html{
+	width: 100%;
+	height: 100%;
+
+}
+
+body{
+	width: 100%;
+	height: 100%;
+}
+
+
+* {
+	box-sizing: border-box;
+}
+
+
+
 
