--- a/Jeep-Site/assets/css/main.css
+++ b/Jeep-Site/assets/css/main.css
@@ -172,7 +172,7 @@ body, html {
   display: flex;
   flex-direction: column;
   left: 0%;
-  top: -14%;
+  top: -13%;
   width: 93%;
   margin-left: 3.294289898%;
   margin-right: 3.294289898%;
@@ -184,6 +184,10 @@ body, html {
   .award .award-pic {
     position: absolute;
     left: 30%; }
+    .award .award-pic img {
+      width: 80%; }
+  .award p {
+    margin-bottom: .5%; }
 
 html {
   width: 100%;
