--- a/Jeep-Site/assets/sass/_hero.scss
+++ b/Jeep-Site/assets/sass/_hero.scss
@@ -1,5 +1,5 @@
 
-.hero{
+.hero__{
 	width: 100%;
 	height: 88%;
 	display: block;
@@ -7,7 +7,7 @@
 	background-repeat: no-repeat;
 	background-size: cover;
 
-	.container-wrapper{
+	.hero__container-wrapper{
 		width: 100%;
 		height: 100%;
 		display: flex;
@@ -17,7 +17,7 @@
 	}
 
 
-	.hero-sub-cont{
+	.hero__sub-cont{
 		width: 310px;
 		height: 200px;
 
