--- a/Jeep-Site/assets/sass/_nav.scss
+++ b/Jeep-Site/assets/sass/_nav.scss
@@ -1,5 +1,5 @@
 
-.nav{
+.nav__{
 	display: flex;
 	width: 100%;
 	height: 60px;
@@ -30,7 +30,7 @@
 	}
 
 
-#logo{
+#nav__logo{
     width: 137px;
     height: 14%;
     background-image: url(../img/sprite_nav.png);
@@ -44,7 +44,7 @@
 	
 }
 
-#barcode-icon{
+#nav__barcode-icon{
 	width: 68px;
     height: 23%;
     background-image: url(../img/sprite_nav.png);
