--- a/Jeep-Site/assets/css/main.css
+++ b/Jeep-Site/assets/css/main.css
@@ -143,7 +143,9 @@ a {
   width: 93%;
   margin-left: 3.294289898%;
   margin-right: 3.294289898%;
-  border-radius: 8px; }
+  border-radius: 8px;
+  position: absolute;
+  top: 70%; }
   .jeep-description__wrap .jeep-description__label {
     width: 100%;
     height: 233px;
@@ -166,7 +168,7 @@ a {
     .jeep-description__wrap .jeep-description__label .jeep-description__classic-img {
       position: absolute;
       right: 6%;
-      top: 86%; }
+      top: 9%; }
 
 .award__ {
   width: 100%;
@@ -177,7 +179,7 @@ a {
   display: flex;
   flex-direction: column;
   left: 0%;
-  top: -13%;
+  top: 8%;
   width: 93%;
   margin-left: 3.294289898%;
   margin-right: 3.294289898%;
@@ -193,6 +195,9 @@ a {
       width: 80%; }
   .award__ p {
     margin-bottom: .5%; }
+
+.footer {
+  margin-top: 4%; }
 
 html {
   width: 100%;
