--- a/Jeep-Site/assets/sass/_2nd-page-hero.scss
+++ b/Jeep-Site/assets/sass/_2nd-page-hero.scss
@@ -55,6 +55,8 @@ a{
     margin-left: 3.294289898%;
     margin-right: 3.294289898%;
     border-radius: 8px;
+       position: absolute;
+    	top: 70%;
 
 	.jeep-description__label{
 		width: 100%;
@@ -93,7 +95,7 @@ a{
 			.jeep-description__classic-img{
 				position: absolute;
 			    right: 6%;
-			    top: 86%;
+			    top: 9%;
 			}
 	
 	
@@ -109,7 +111,7 @@ a{
     display: flex;
     flex-direction: column;
     left: 0%;
-    top: -13%;
+    top: 8%;
     width: 93%;
     margin-left: 3.294289898%;
     margin-right: 3.294289898%;
@@ -133,6 +135,10 @@ a{
     	p{
     		margin-bottom: .5%;
     	}
+}
+
+.footer{
+	margin-top: 4%;
 }
 
 
